--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -66,8 +66,8 @@
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
-            <a class="collapse-item" href="squatlive">실시간 촬영</a>
-            <a class="collapse-item" href="squatvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/squatlive">실시간 촬영</a>
+            <a class="collapse-item" href="/squatvideo">동영상 업로드</a>
           </div>
         </div>
       </li>
@@ -81,8 +81,8 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
-            <a class="collapse-item" href="runninglive">실시간촬영</a>
-            <a class="collapse-item" href="runningvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/runninglive">실시간촬영</a>
+            <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
@@ -100,14 +100,14 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="record">
+        <a class="nav-link" href="/record">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>나의 기록</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item active">
-        <a class="nav-link" href="rank">
+        <a class="nav-link" href="/rank">
           <i class="fas fa-fw fa-table"></i>
           <span>나의 랭킹</span></a>
       </li>
