--- a/application/templates/homepage/squatlive.html
+++ b/application/templates/homepage/squatlive.html
@@ -12,12 +12,12 @@
   <title>아리아리 - 스쿼트 실시간촬영</title>
 
   <!-- Custom fonts for this template-->
-  <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
-  <link href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}" rel="stylesheet" type="text/css">
+  <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="static/css/sb-admin-2.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="{{ url_for('static', filename='css/sb-admin-2.min.css') }}" rel="stylesheet">
+  <link href="static/css/sb-admin-2.min.css" rel="stylesheet">
 
   <!-- Load TensorFlow.js -->
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
@@ -49,7 +49,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="index">
+        <a class="nav-link" href="/index">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
@@ -71,8 +71,8 @@
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
-            <a class="collapse-item active" href="squatlive">실시간 촬영</a>
-            <a class="collapse-item" href="squatvideo">동영상 업로드</a>
+            <a class="collapse-item active" href="/squatlive">실시간 촬영</a>
+            <a class="collapse-item" href="/squatvideo">동영상 업로드</a>
           </div>
         </div>
       </li>
@@ -86,8 +86,8 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
-            <a class="collapse-item" href="runninglive">실시간촬영</a>
-            <a class="collapse-item" href="runningvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/runninglive">실시간촬영</a>
+            <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
@@ -107,14 +107,14 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="record">
+        <a class="nav-link" href="/record">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>나의 기록</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="rank">
+        <a class="nav-link" href="/rank">
           <i class="fas fa-fw fa-table"></i>
           <span>나의 랭킹</span></a>
       </li>
@@ -348,7 +348,7 @@
                   
                     
                 </div>
-                <script src= "{{ url_for('static', filename='js/cam_script.js') }}" ></script>
+                <script src= "/static/javascripts/cam_script.js" ></script>
                 <!-- <script src= "./static/javascripts/cam_script.js" ></script> -->
                 </div>
               </div>
