--- a/application/templates/homepage/squatvideo.html
+++ b/application/templates/homepage/squatvideo.html
@@ -29,7 +29,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/index">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
@@ -41,7 +41,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="index">
+        <a class="nav-link" href="/index">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
@@ -63,8 +63,8 @@
         <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
-            <a class="collapse-item" href="squatlive">실시간 촬영</a>
-            <a class="collapse-item active" href="squatvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/squatlive">실시간 촬영</a>
+            <a class="collapse-item active" href="/squatvideo">동영상 업로드</a>
           </div>
         </div>
       </li>
@@ -78,8 +78,8 @@
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
-            <a class="collapse-item" href="runninglive">실시간촬영</a>
-            <a class="collapse-item" href="runningvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/runninglive">실시간촬영</a>
+            <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
@@ -98,14 +98,14 @@
       
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="record">
+        <a class="nav-link" href="/record">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>나의 기록</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="rank">
+        <a class="nav-link" href="/rank">
           <i class="fas fa-fw fa-table"></i>
           <span>나의 랭킹</span></a>
       </li>
