--- a/application/templates/homepage/squatlive.html
+++ b/application/templates/homepage/squatlive.html
@@ -103,7 +103,7 @@
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
-      
+
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -329,7 +329,7 @@
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">실시간 촬영</h1>
 
-        
+
 
             <div class="col-xs-12">
 
@@ -351,22 +351,23 @@
                   <script type="text/javascript">
                       // More API functions here:
                       // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
-          
+
                       // the link to your model provided by Teachable Machine export panel
                       const URL = "./my_model/";
                       let model, webcam, ctx, labelContainer, maxPredictions;
                       var stop_var = 0;
                       var count = 0;
+                      var stand = 0;
                       async function init() {
                           const modelURL = URL + "model.json";
                           const metadataURL = URL + "metadata.json";
-          
+
                           // load the model and metadata
                           // Refer to tmImage.loadFromFiles() in the API to support files from a file picker
                           // Note: the pose library adds a tmPose object to your window (window.tmPose)
                           model = await tmPose.load(modelURL, metadataURL);
                           maxPredictions = model.getTotalClasses();
-          
+
                           // Convenience function to setup a webcam
                           const width = 640;
                           const height = 480
@@ -375,7 +376,7 @@
                           await webcam.setup(); // request access to the webcam
                           await webcam.play();
                           window.requestAnimationFrame(loop);
-          
+
                           // append/get elements to the DOM
                           const canvas = document.getElementById("canvas");
                           canvas.width = width; canvas.height = height;
@@ -390,7 +391,7 @@
                           stop_var = 1;
                       }
 
-          
+
                       async function loop(timestamp) {
                           webcam.update(); // update the webcam frame
                           if(stop_var == 0){
@@ -400,9 +401,9 @@
                           else{
                               var socket = io();
                               // socket.send("hello");
-                              
+
                               socket.emit('myconnect', {'count':count});
-                              
+
                               // socket.on('connect', function(){
                               //   console.log('socket start')
                               //   socket.send("hello");
@@ -410,7 +411,7 @@
                               // })
                           }
                       }
-          
+
                       async function predict() {
                           // Prediction #1: run input through posenet
                           // estimatePose can take in an image, video or canvas html element
@@ -421,17 +422,21 @@
                           for (let i = 0; i < maxPredictions; i++) {
                               const classPrediction =
                                   prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                                  if(i == 1 && prediction[i].probability.toFixed(2) >= 0.8){
-                                    count += 1;
-                                    console.log(count);
+                                  if(i == 0 && prediction[i].probability.toFixed(2) >= 0.9){
+                                    stand = 1;
                                   }
+                                  if(i == 1 && prediction[i].probability.toFixed(2) >= 0.9 && stand == 1){
+                                    count += 1;
+                                    stand = 0;
+                                  }
+                                  console.log(count);
                               labelContainer.childNodes[i].innerHTML = classPrediction;
                           }
 
                           // finally draw the poses
                           drawPose(pose);
                       }
-          
+
                       function drawPose(pose) {
                           if (webcam.canvas) {
                               ctx.drawImage(webcam.canvas, 0, 0);
