--- a/application/templates/homepage/squatlive.html
+++ b/application/templates/homepage/squatlive.html
@@ -348,6 +348,7 @@
                   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
                   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
                   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+                  <!-- <script src="https://unpkg.com/whatwg-fetch@2.0.4/fetch.js"></script> -->
                   <script type="text/javascript">
                       // More API functions here:
                       // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/pose
@@ -399,16 +400,19 @@
                               window.requestAnimationFrame(loop);
                           }
                           else{
-                              var socket = io();
-                              // socket.send("hello");
+                            var data = {
+                              'count' : count,
+                              'test' : "psm"
+                            }
+                            fetch('http://localhost:5000/exercise_end', {
+                              method : 'POST',
+                              headers: { 'Content-Type': 'application/json' },
+                              body : JSON.stringify(data)
+                            }).then(function(res){
+                              console.log(res);
+                              window.location.href = res.url;
+                            })
 
-                              socket.emit('myconnect', {'count':count});
-
-                              // socket.on('connect', function(){
-                              //   console.log('socket start')
-                              //   socket.send("hello");
-                              //   console.log('socket connected')
-                              // })
                           }
                       }
 
