--- a/application/templates/homepage/record.html
+++ b/application/templates/homepage/record.html
@@ -346,8 +346,8 @@
                   <h6 class="m-0 font-weight-bold text-primary">월별 덤벨숄더프레스 운동량</h6>
                 </div>
                 <div class="card-body">
-                  <div class="chart-bar">
-                    <canvas id="myBarChart1"></canvas>
+                  <div class="chart-area">
+                    <canvas id="myAreaChart2"></canvas>
                   </div>
                   <hr>
                 </div>
@@ -355,6 +355,7 @@
 
             </div>
 
+          
 
             <!-- Donut Chart -->
             <div class="col-xl-4 col-lg-5">
@@ -452,6 +453,7 @@
 
   <!-- Page level custom scripts -->
   <script src="static/js/demo/chart-area-demo.js"></script>
+  <script src="static/js/demo/chart-area-demo2.js"></script>
   <script src="static/js/demo/chart-pie-demo.js"></script>
   <script src="static/js/demo/chart-pie-demo2.js"></script>
   
