--- a/application/templates/homepage/index.html
+++ b/application/templates/homepage/index.html
@@ -64,7 +64,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
             <a class="collapse-item" href='/squatlive'>실시간 촬영</a>
-            <a class="collapse-item" href="/squatvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/squatvideo">동영상 업로드(준비중)</a>
           </div>
         </div>
       </li>
@@ -73,13 +73,13 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>제자리뛰기</span>
+          <span>덤벨숄더프레스</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
+            <h6 class="collapse-header">덤벨숄더프레스 운동하기:</h6>
             <a class="collapse-item" href="/runninglive">실시간촬영</a>
-            <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/runningvideo">동영상 업로드(준비중)</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
@@ -318,7 +318,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 m-0 font-weight-bold text-primary">포하항 포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포핳핳항🛳🌊🚢🌊⚓️⛴포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포항항ꉂꉂ(ᵔᗜᵔ*)⛴🛳🌊⚓️🚢🌊⛴</h1> 
+            <h1 class="h3 m-0 font-weight-bold text-primary">포하항 포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포핳핳항🛳🌊🚢🌊⚓️⛴포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포항항ꉂꉂ(ᵔᗜᵔ*)⛴🛳🌊⚓️🚢🌊⛴</h1>
             <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>-->
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
@@ -419,7 +419,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <iframe width="500" height="315" src="https://www.youtube.com/embed/zmRRuvNAKGo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
-          
+
           <!-- Content Row -->
           <div class="row">
             <div style="width:100%; word-break:break-all;word-wrap:break-word;">
@@ -428,7 +428,7 @@
               <br>
               <br>
               </div>
-              
+
 
             <!-- Content Column -->
             <div class="col-lg-6 mb-4">
