--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -67,7 +67,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
             <a class="collapse-item" href="/squatlive">실시간 촬영</a>
-            <a class="collapse-item" href="/squatvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/squatvideo">동영상 업로드(준비중)</a>
           </div>
         </div>
       </li>
@@ -76,13 +76,13 @@
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>제자리뛰기</span>
+          <span>덤벨숄더프레스</span>
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
+            <h6 class="collapse-header">덤벨숄더프레스 운동하기:</h6>
             <a class="collapse-item" href="/runninglive">실시간촬영</a>
-            <a class="collapse-item" href="/runningvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/runningvideo">동영상 업로드(준비중)</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
