--- a/application/templates/homepage/squatvideo.html
+++ b/application/templates/homepage/squatvideo.html
@@ -19,7 +19,10 @@
   <link href="static/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
-
+<script type="text/javascript">
+  alert("준비중입니다.");
+  history.go(-1);
+</script>
 <body id="page-top">
 
   <!-- Page Wrapper -->
