--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -331,6 +331,7 @@
             <div class="card-body">
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  {{ placeholder }}
                   <thead>
                     <tr>
                       <th>랭킹</th>
