운동 개수 실시간 출력

--- a/application/templates/homepage/runninglive.html
+++ b/application/templates/homepage/runninglive.html
@@ -36,7 +36,7 @@
 		<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
 			<!-- Sidebar - Brand -->
-			<a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+			<a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
 				<div class="sidebar-brand-icon rotate-n-15">
 					<i class="fas fa-laugh-wink"></i>
 				</div>
@@ -425,6 +425,10 @@
 										stop_var = 1;
 									}
 
+                  function print_cnt(){
+                    document.getElementById("cnt").innerHTML = count;
+                  }
+
 
 									async function loop(timestamp) {
 										webcam.update(); // update the webcam frame
@@ -467,6 +471,7 @@
 												count += 1;
 												stand = 0;
 											}
+                      print_cnt();
 											console.log(count);
 											// labelContainer.childNodes[i].innerHTML = classPrediction;
 										}
@@ -498,7 +503,7 @@
 						<!-- Card Header - Dropdown -->
 						<div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
 							<h6 class="m-0 font-weight-bold text-primary">운동갯수</h6>
-							<p id="count">0</p>
+							<p id="cnt">0</p>
 
 						</div>
 						<!-- /.container-fluid -->
