--- a/application/templates/homepage/runninglive.html
+++ b/application/templates/homepage/runninglive.html
@@ -114,7 +114,7 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="/rank">
+        <a class="nav-link" href="/ranking">
           <i class="fas fa-fw fa-table"></i>
           <span>나의 랭킹</span></a>
       </li>
