--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -107,9 +107,9 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item active">
-        <a class="nav-link" href="/rank">
+        <a class="nav-link" href="/ranking">
           <i class="fas fa-fw fa-table"></i>
-          <span>나의 랭킹</span></a>
+          <span>나의 랭킹 </span></a>
       </li>
 
       <!-- Divider -->
@@ -326,7 +326,7 @@
           <!-- DataTales Example -->
           <div class="card shadow mb-4">
             <div class="card-header py-3">
-              <h6 class="m-0 font-weight-bold text-primary">이 주의 랭킹</h6>
+              <h6 class="m-0 font-weight-bold text-primary">이 주의 랭킹{{ hi }}</h6>
             </div>
             <div class="card-body">
               <div class="table-responsive">
