rank_to_ranking
rank_to_ranking

--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -320,7 +320,7 @@
         <div class="container-fluid">
 
           <!-- Page Heading -->
-          <h1 class="h3 mb-2 text-gray-800">이 주의 랭킹</h1>
+          <h1 class="h3 mb-2 text-gray-800">이 주의 랭킹{{hi}}</h1>
           <p class="mb-4"> 이번주 스쿼트와 덤벨숄더프레스 운동별 기록  <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
 
           <!-- DataTales Example -->
