--- a/application/templates/homepage/runningvideo.html
+++ b/application/templates/homepage/runningvideo.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>아리아리 - 제자리뛰기 동영상업로드</title>
+  <title>아리아리 - 덤벨숄더프레스 동영상업로드</title>
 
   <!-- Custom fonts for this template-->
   <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -19,7 +19,10 @@
   <link href="static/css/sb-admin-2.min.css" rel="stylesheet">
 
 </head>
-
+<script type="text/javascript">
+  alert("준비중입니다.");
+  history.go(-1);
+</script>
 <body id="page-top">
 
   <!-- Page Wrapper -->
@@ -64,7 +67,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">스쿼트 운동하기:</h6>
             <a class="collapse-item" href="/squatlive">실시간 촬영</a>
-            <a class="collapse-item" href="/squatvideo">동영상 업로드</a>
+            <a class="collapse-item" href="/squatvideo">동영상 업로드(준비중)</a>
           </div>
         </div>
       </li>
@@ -73,13 +76,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseUtilities" aria-expanded="true" aria-controls="collapseUtilities">
           <i class="fas fa-fw fa-wrench"></i>
-          <span>제자리뛰기</span>
+          <span>덤벨숄더프레스</span>
         </a>
         <div id="collapseUtilities" class="collapse show" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">제자리뛰기 운동하기:</h6>
+            <h6 class="collapse-header">덤벨숄더프레스 운동하기:</h6>
             <a class="collapse-item" href="/runninglive">실시간촬영</a>
-            <a class="collapse-item active" href="/runningvideo">동영상 업로드</a>
+            <a class="collapse-item active" href="/runningvideo">동영상 업로드(준비중)</a>
             <!-- <a class="collapse-item" href="utilities-animation.html">Animations</a>
             <a class="collapse-item" href="utilities-other.html">Other</a> -->
           </div>
@@ -95,7 +98,7 @@
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
-      
+
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -443,14 +446,14 @@
     </div>
   </div>
 
-  <!-- Bootstrap core JavaScript-->
+  <!— Bootstrap core JavaScript—>
   <script src="static/vendor/jquery/jquery.min.js"></script>
   <script src="static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Core plugin JavaScript-->
+  <!— Core plugin JavaScript—>
   <script src="static/vendor/jquery-easing/jquery.easing.min.js"></script>
 
-  <!-- Custom scripts for all pages-->
+  <!— Custom scripts for all pages—>
   <script src="static/js/sb-admin-2.min.js"></script>
 
 </body>
