--- a/application/templates/homepage/squatlive.html
+++ b/application/templates/homepage/squatlive.html
@@ -400,11 +400,6 @@
                     stop_var = 1;
                   }
 
-                  function print_cnt(){
-                    document.getElementById("cnt").innerHTML = count;
-                  }
-
-
                   async function loop(timestamp) {
                     webcam.update(); // update the webcam frame
                     if (stop_var == 0) {
@@ -416,8 +411,8 @@
                         'count': count,
                         'kind': 'squat'
                       }
-                      console.log(host+'cumulative-result');
-                      fetch(host+'cumulative-result', {
+                      console.log(host+'ranking');
+                      fetch(host+'ranking', {
                         method: 'POST',
                         headers: { 
                           'Content-Type': 'application/json' },
@@ -425,7 +420,7 @@
                       }).then(function (res) {
                         console.log(res.data);
                       })
-                      fetch(host+'total-result', {
+                      fetch(host+'record', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify(data)
@@ -439,55 +434,41 @@
                   }
 
                   async function predict() {
-                    // Prediction #1: run input through posenet
-                    // estimatePose can take in an image, video or canvas html element
-                    const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
-                    // Prediction 2: run input through teachable machine classification model
-                    const prediction = await model.predict(posenetOutput);
+										// Prediction #1: run input through posenet
+										// estimatePose can take in an image, video or canvas html element
+										const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
+										// Prediction 2: run input through teachable machine classification model
+										const prediction = await model.predict(posenetOutput);
 
-                    for (let i = 0; i < maxPredictions; i++) {
-                      const classPrediction =
-                        prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                      if (i == 0 && prediction[i].probability.toFixed(2) >= 0.9) {
-                        stand = 1;
-                      }
+										for (let i = 0; i < maxPredictions; i++) {
+											const classPrediction =
+												prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+											if (i == 0 && prediction[i].probability.toFixed(2) >= 0.9) {
+												stand = 1;
+											}
+											if (i == 1 && prediction[i].probability.toFixed(2) >= 0.9 && stand == 1) {
+												count += 1;
+												stand = 0;
+											}
+											console.log(count);
+											// labelContainer.childNodes[i].innerHTML = classPrediction;
+										}
 
-                      async function predict() {
-                          // Prediction #1: run input through posenet
-                          // estimatePose can take in an image, video or canvas html element
-                          const { pose, posenetOutput } = await model.estimatePose(webcam.canvas);
-                          // Prediction 2: run input through teachable machine classification model
-                          const prediction = await model.predict(posenetOutput);
+										// finally draw the poses
+										drawPose(pose);
+									}
 
-                          for (let i = 0; i < maxPredictions; i++) {
-                              const classPrediction =
-                                  prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                                  if(i == 0 && prediction[i].probability.toFixed(2) >= 0.9){
-                                    stand = 1;
-                                  }
-                                  if(i == 1 && prediction[i].probability.toFixed(2) >= 0.9 && stand == 1){
-                                    count += 1;
-                                    stand = 0;
-                                  }
-                                  console.log(count);
-                              labelContainer.childNodes[i].innerHTML = classPrediction;
-                          }
-
-                          // finally draw the poses
-                          drawPose(pose);
-                      }
-
-                      function drawPose(pose) {
-                          if (webcam.canvas) {
-                              ctx.drawImage(webcam.canvas, 0, 0);
-                              // draw the keypoints and skeleton
-                              if (pose) {
-                                  const minPartConfidence = 0.5;
-                                  tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
-                                  tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
-                              }
-                          }
-                      }
+									function drawPose(pose) {
+										if (webcam.canvas) {
+											ctx.drawImage(webcam.canvas, 0, 0);
+											// draw the keypoints and skeleton
+											if (pose) {
+												const minPartConfidence = 0.5;
+												tmPose.drawKeypoints(pose.keypoints, minPartConfidence, ctx);
+												tmPose.drawSkeleton(pose.keypoints, minPartConfidence, ctx);
+											}
+										}
+									}
                   </script>
                 </div>
               </div>
