--- a/application/templates/homepage/runninglive.html
+++ b/application/templates/homepage/runninglive.html
@@ -434,7 +434,7 @@
 										else {
 											var data = {
 												'count': count,
-												'kind': 'shoulder'
+												'kind': 'dsp'
 											}
 											fetch(host + 'ranking', {
 												method: 'POST',
