--- a/application/templates/homepage/index.html
+++ b/application/templates/homepage/index.html
@@ -318,7 +318,7 @@
 
           <!-- Page Heading -->
           <div class="d-sm-flex align-items-center justify-content-between mb-4">
-            <h1 class="h3 m-0 font-weight-bold text-primary">포하항 포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포핳핳항🛳🌊🚢🌊⚓️⛴포항항ꉂꉂ(ᵔᗜᵔ*)ㅋㅋㅋㅋ🛳🌊포항항항🚢🌊포항항ꉂꉂ(ᵔᗜᵔ*)⛴🛳🌊⚓️🚢🌊⛴</h1>
+            <h1 class="h3 m-0 font-weight-bold text-primary">아리아리</h1>
             <!-- <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>-->
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </div>
@@ -471,48 +471,48 @@
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-primary text-white shadow">
                     <div class="card-body">
-                      Primary
-                      <div class="text-white-50 small">#4e73df</div>
+                      스쿼트
+                      <div class="text-white-50 small">255kcal/20mins</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-success text-white shadow">
                     <div class="card-body">
-                      Success
-                      <div class="text-white-50 small">#1cc88a</div>
+                      플랭크
+                      <div class="text-white-50 small">100kcal/15mins</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-info text-white shadow">
                     <div class="card-body">
-                      Info
-                      <div class="text-white-50 small">#36b9cc</div>
+                      줄넘기
+                      <div class="text-white-50 small">155kcal/15mins</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-warning text-white shadow">
                     <div class="card-body">
-                      Warning
-                      <div class="text-white-50 small">#f6c23e</div>
+                      달리기
+                      <div class="text-white-50 small">300kcal/30mins</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-danger text-white shadow">
                     <div class="card-body">
-                      Danger
-                      <div class="text-white-50 small">#e74a3b</div>
+                      런지
+                      <div class="text-white-50 small">221kcal/30mins</div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                   <div class="card bg-secondary text-white shadow">
                     <div class="card-body">
-                      Secondary
-                      <div class="text-white-50 small">#858796</div>
+                      푸쉬업
+                      <div class="text-white-50 small">70kcal/20mins</div>
                     </div>
                   </div>
                 </div>
@@ -525,14 +525,21 @@
               <!-- Illustrations -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Illustrations</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">스쿼트의 여덟 가지 주요 건강 효과</h6>
                 </div>
                 <div class="card-body">
                   <div class="text-center">
                     <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;" src='static/img/undraw_posting_photo.svg' alt="">
                   </div>
-                  <p>Add some quality, svg illustrations to your project courtesy of <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p>
-                  <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a>
+                  <p>전신 근육을 발달시킵니다. <br>
+                    기능성 운동은 실생활 활동이 더욱 쉬워지게 합니다. <br>
+                    더 많은 지방 연소<br>
+                    이동성과 균형 감각의 유지 <br>
+                    손상 예방 <br>
+                    스포츠 능력 향상 -- 더 높이 더 빨리<br>
+                    노폐물 제거에 도움<br>
+                    <!-- <a target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a constantly updated collection of beautiful svg images that you can use completely free and without attribution!</p> -->
+                  <!-- <a target="_blank" rel="nofollow" href="https://undraw.co/">Browse Illustrations on unDraw &rarr;</a> -->
                 </div>
               </div>
 
@@ -542,7 +549,7 @@
                 </div>
 
               <!-- Approach -->
-              <div class="card shadow mb-4">
+              <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Development Approach</h6>
                 </div>
@@ -553,7 +560,7 @@
               </div>
 
             </div>
-          </div>
+          </div> -->
 
         </div>
         <!-- /.container-fluid -->
