--- a/application/templates/homepage/rank.html
+++ b/application/templates/homepage/rank.html
@@ -344,7 +344,7 @@
 
                   <tbody>
                     <ul>
-                    {% for a in hi %}
+                    <!-- {% for a in hi %}
                       {% if a.kind == 'squat' %}
                       <tr>
                         <td>1</td>
@@ -376,26 +376,43 @@
                       </tr> 
                       {% endif%}
 
-                      {% endfor %}
+                      {% endfor %} -->
+                      <tr>
+                        <td>1</td>
+                        <td>최어진</td>
+                        <td>20</td>
+                        <td>30</td>
+                        <td>23</td>
+                        <td>2020/10/11</td>
+                      </tr>
+                      <tr>
+                        <td>2</td>
+                        <td>박영인</td>
+                        <td>3</td>
+                        <td>5</td>
+                        <td>23</td>
+                        <td>2020/10/11</td>
+                      </tr>
+                      <tr>
+                        <td>3</td>
+                        <td>박상민</td>
+                        <td>7</td>
+                        <td>20</td>
+                        <td>26</td>
+                        <td>2020/10/13</td>
+                      </tr>
+                      <tr>
+                        <td>4</td>
+                        <td>공희산</td>
+                        <td>6</td>
+                        <td>17</td>
+                        <td>26</td>
+                        <td>2020/10/12</td>
+                      </tr>
                     </ul>
                 
                 
-                    <!-- <tr>
-                      <td>1</td>
-                      <td>최어진</td>
-                      <td>20</td>
-                      <td>30</td>
-                      <td>23</td>
-                      <td>2020/10/11</td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>박영인</td>
-                      <td>3</td>
-                      <td>5</td>
-                      <td>23</td>
-                      <td>2020/10/11</td>
-                    </tr> -->
+                    
                   </tbody>
                 </table>
               </div>
