--- a/application/templates/homepage/record.html
+++ b/application/templates/homepage/record.html
@@ -364,24 +364,23 @@
 
             <!-- Donut Chart -->
             <div class="col-xl-4 col-lg-5">
-              <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
+              <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">나의 운동비중</h6>
                 </div>
-                <!-- Card Body -->
+
                 <div class="card-body">
                   <div class="chart-area">
                     <canvas id="myPieChart"></canvas>
                   </div>
                   <hr>
                 </div>
-              </div>
+              </div> -->
 
                 <div style="width:100%; word-break:break-all;word-wrap:break-word;">
                   <br>
                 </div>
-              <div class="card shadow mb-4">
+              <!-- <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">나의 운동비중</h6>
                 </div>
@@ -391,7 +390,7 @@
                   </div>
                   <hr>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
